@@ -1,3 +1,8 @@
+2010-04-01  Nicholas J Humfrey <njh@aelius.com>
+
+	* src/rdf_query.c, src/rdf_query.h: Added 
+	librdf_query_languages_enumerate() function.
+
 2009-12-16  Dave Beckett  <dave@dajobe.org>
 
 	* Snapshotted redland_1_0_10 for 1.0.10 release (SVN 15919)
